WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286005
[WGSL] Generated metal does not compile from
https://playcanvas.vercel.app/#/graphics/particles-mesh
https://bugs.webkit.org/show_bug.cgi?id=286005
Summary
[WGSL] Generated metal does not compile from https://playcanvas.vercel.app/#/...
Mike Wyrzykowski
Reported
2025-01-15 09:28:05 PST
[WGSL] Generated metal does not compile from
https://playcanvas.vercel.app/#/graphics/particles-mesh
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-15 09:28:40 PST
<
rdar://problem/142975586
>
Tadeu Zagallo
Comment 2
2025-01-23 14:39:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39466
EWS
Comment 3
2025-01-24 07:35:46 PST
Committed
289344@main
(be74adeaac4c): <
https://commits.webkit.org/289344@main
> Reviewed commits have been landed. Closing PR #39466 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug