[WGSL] Generated metal does not compile from https://playcanvas.vercel.app/#/graphics/particles-mesh https://bugs.webkit.org/show_bug.cgi?id=286005 rdar://142975586

Reviewed by Mike Wyrzykowski.

While packing types, when visiting arrays of vec3 we marked that vec3 is used,
but failed to mark that the array is also used, which could result in the array
helpers missings from the generated metal code.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::packArrayType):
* Source/WebGPU/WGSL/tests/valid/packing-nested-array.wgsl: Added.

Canonical link: https://commits.webkit.org/289344@main